[package]
name = "ratiomaster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.17", features = ["derive"] }
lava_torrent = "0.7.0"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json", "gzip"] }
tokio = { version = "1", features = ["full"] }
hex = "0.4.3"
ctrlc = "3.2.2"